// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardTabs > renders correctly 1`] = `
<v-row-stub
  class="fill-height flex-column bg-lw-gray dashboard-tabs-container"
  data-v-b63b48ce=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <!--v-if-->
  <v-col-stub
    class="flex-shrink-1 flex-grow-0 d-print"
    cols="false"
    data-v-b63b48ce=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <div
      class="d-flex bg-primary-dark flex-nowrap align-center pl-1"
      data-v-b63b48ce=""
    >
      <div
        class="d-print-none tabs-max-width"
        data-v-b63b48ce=""
      >
        <draggable-tabs-stub
          data-v-b63b48ce=""
          draggingenabled="false"
          selectedtabindex="0"
          tabs="[object Object],[object Object],[object Object]"
          textvalue="name"
        />
      </div>
      <v-row-stub
        class="flex-shrink-1 flex-grow-0 fill-height align-center ml-4"
        data-v-b63b48ce=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <evocon-v-tooltip-wrap-stub
          data-v-b63b48ce=""
          location="right"
          opendelay="500"
          text="Add tab"
        />
      </v-row-stub>
      <v-spacer-stub
        data-v-b63b48ce=""
        tag="div"
      />
      <v-row-stub
        class="fill-height align-center flex-shrink-1 flex-grow-0 pl-1 pr-4"
        data-v-b63b48ce=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <span
          class="text-tertiary-dark text--body-1 mr-3"
          data-v-b63b48ce=""
        >
          Rotation
        </span>
        <multi-line-switch-stub
          data-v-b63b48ce=""
          disabled="false"
          helptext=""
          id="rotation-switch"
          maintext=""
          modelvalue="false"
          samelineinput="false"
        />
        <evocon-v-tooltip-wrap-stub
          data-v-b63b48ce=""
          location="bottom"
          opendelay="500"
          text="Edit"
        />
        <evocon-v-tooltip-wrap-stub
          data-v-b63b48ce=""
          location="bottom"
          opendelay="500"
          text="Share"
        />
      </v-row-stub>
    </div>
  </v-col-stub>
  <v-col-stub
    class="dashboard-tabs-content"
    cols="false"
    data-v-b63b48ce=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    
    
    <!--v-if-->
  </v-col-stub>
</v-row-stub>
`;

exports[`DashboardTabs > renders correctly if isEditPages is true 1`] = `
<v-row-stub
  class="fill-height flex-column bg-lw-gray dashboard-tabs-container"
  data-v-b63b48ce=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <!--v-if-->
  <v-col-stub
    class="flex-shrink-1 flex-grow-0 d-print"
    cols="false"
    data-v-b63b48ce=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <div
      class="d-flex bg-primary-dark flex-nowrap align-center pl-1"
      data-v-b63b48ce=""
    >
      <div
        class="d-print-none tabs-max-width"
        data-v-b63b48ce=""
      >
        <div
          class="d-flex align-center tabs-container"
          data-v-2b3bc4f9=""
          data-v-b63b48ce=""
        >
          <!--v-if-->
          <div
            class="draggable-tabs"
            data-v-2b3bc4f9=""
          >
            <div
              class="draggable-tabs__tab draggable-tabs__tab--selected"
              data-draggable="true"
              data-v-2b3bc4f9=""
            >
              <v-icon-stub
                class="drag-icon"
                color="secondary-dark"
                data-v-2b3bc4f9=""
                disabled="false"
                end="false"
                size="16"
                start="false"
                tag="i"
              >
                M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z
              </v-icon-stub>
              <span
                class="text-primary-text"
                data-v-2b3bc4f9=""
              >
                tab1
              </span>
              
              <!--v-if-->
              <menu-with-button-activator-stub
                buttonclasses="ml-1 mt-n1 position-absolute"
                buttonicon="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                buttoniconcolor="white"
                buttontype="secondary"
                closeoncontentclick="true"
                data-v-b63b48ce=""
                hascheckbox="false"
                iconkey="icon"
                issingleselect="false"
                items="[object Object],[object Object],[object Object]"
                listwidth="auto"
                location="bottom right"
                primarytextfield="name"
                secondarytextfield=""
                size="small"
                tertiarytextfield=""
                value=""
                valuekey=""
              />
              
            </div>
            <div
              class="draggable-tabs__tab"
              data-draggable="true"
              data-v-2b3bc4f9=""
            >
              <v-icon-stub
                class="drag-icon"
                color="secondary-dark"
                data-v-2b3bc4f9=""
                disabled="false"
                end="false"
                size="16"
                start="false"
                tag="i"
              >
                M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z
              </v-icon-stub>
              <span
                class="text-quaternary-dark-2"
                data-v-2b3bc4f9=""
              >
                tab2
              </span>
              
              <!--v-if-->
              <menu-with-button-activator-stub
                buttonclasses="ml-1 mt-n1 position-absolute"
                buttonicon="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                buttoniconcolor="white"
                buttontype="secondary"
                closeoncontentclick="true"
                data-v-b63b48ce=""
                hascheckbox="false"
                iconkey="icon"
                issingleselect="false"
                items="[object Object],[object Object],[object Object]"
                listwidth="auto"
                location="bottom right"
                primarytextfield="name"
                secondarytextfield=""
                size="small"
                tertiarytextfield=""
                value=""
                valuekey=""
              />
              
            </div>
            <div
              class="draggable-tabs__tab"
              data-draggable="true"
              data-v-2b3bc4f9=""
            >
              <v-icon-stub
                class="drag-icon"
                color="secondary-dark"
                data-v-2b3bc4f9=""
                disabled="false"
                end="false"
                size="16"
                start="false"
                tag="i"
              >
                M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z
              </v-icon-stub>
              <span
                class="text-quaternary-dark-2"
                data-v-2b3bc4f9=""
              >
                tab3
              </span>
              
              <!--v-if-->
              <menu-with-button-activator-stub
                buttonclasses="ml-1 mt-n1 position-absolute"
                buttonicon="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                buttoniconcolor="white"
                buttontype="secondary"
                closeoncontentclick="true"
                data-v-b63b48ce=""
                hascheckbox="false"
                iconkey="icon"
                issingleselect="false"
                items="[object Object],[object Object],[object Object]"
                listwidth="auto"
                location="bottom right"
                primarytextfield="name"
                secondarytextfield=""
                size="small"
                tertiarytextfield=""
                value=""
                valuekey=""
              />
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      <v-row-stub
        class="flex-shrink-1 flex-grow-0 fill-height align-center ml-4"
        data-v-b63b48ce=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <!--v-if-->
      </v-row-stub>
      <v-spacer-stub
        data-v-b63b48ce=""
        tag="div"
      />
      <v-row-stub
        class="fill-height align-center flex-shrink-1 flex-grow-0 pl-1 pr-4"
        data-v-b63b48ce=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <!--v-if-->
        <!--v-if-->
        <evocon-v-button-stub
          class="mx-1"
          color=""
          data-v-b63b48ce=""
          icon=""
          iconcolor=""
          id="close-edit-button"
          text="Close"
          textclass=""
          type="primary-light"
        />
        <!--v-if-->
      </v-row-stub>
    </div>
  </v-col-stub>
  <v-col-stub
    class="dashboard-tabs-content"
    cols="false"
    data-v-b63b48ce=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    
    
    <div
      class="fill-height"
      data-v-b63b48ce=""
      id="page-edit-overflow"
    />
  </v-col-stub>
</v-row-stub>
`;

exports[`DashboardTabs > renders correctly if some tab has sharedAtISO 1`] = `
<v-row-stub
  class="fill-height flex-column bg-lw-gray dashboard-tabs-container"
  data-v-b63b48ce=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <!--v-if-->
  <v-col-stub
    class="flex-shrink-1 flex-grow-0 d-print"
    cols="false"
    data-v-b63b48ce=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <div
      class="d-flex bg-primary-dark flex-nowrap align-center pl-1"
      data-v-b63b48ce=""
    >
      <div
        class="d-print-none tabs-max-width"
        data-v-b63b48ce=""
      >
        <div
          class="d-flex align-center tabs-container"
          data-v-2b3bc4f9=""
          data-v-b63b48ce=""
        >
          <!--v-if-->
          <div
            class="draggable-tabs"
            data-v-2b3bc4f9=""
          >
            <div
              class="draggable-tabs__tab draggable-tabs__tab--selected"
              data-draggable="true"
              data-v-2b3bc4f9=""
            >
              <!--v-if-->
              <span
                class="text-primary-text"
                data-v-2b3bc4f9=""
              >
                tab1
              </span>
              
              <new-indicator-stub
                class="ml-1"
                data-v-b63b48ce=""
                shownuntil="2020-02-28T12:34:56.000Z"
                small="true"
                text=""
              />
              <!--v-if-->
              
            </div>
            <div
              class="draggable-tabs__tab"
              data-draggable="true"
              data-v-2b3bc4f9=""
            >
              <!--v-if-->
              <span
                class="text-quaternary-dark-2"
                data-v-2b3bc4f9=""
              >
                tab2
              </span>
              
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      <v-row-stub
        class="flex-shrink-1 flex-grow-0 fill-height align-center ml-4"
        data-v-b63b48ce=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <evocon-v-tooltip-wrap-stub
          data-v-b63b48ce=""
          location="right"
          opendelay="500"
          text="Add tab"
        />
      </v-row-stub>
      <v-spacer-stub
        data-v-b63b48ce=""
        tag="div"
      />
      <v-row-stub
        class="fill-height align-center flex-shrink-1 flex-grow-0 pl-1 pr-4"
        data-v-b63b48ce=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <span
          class="text-tertiary-dark text--body-1 mr-3"
          data-v-b63b48ce=""
        >
          Rotation
        </span>
        <multi-line-switch-stub
          data-v-b63b48ce=""
          disabled="false"
          helptext=""
          id="rotation-switch"
          maintext=""
          samelineinput="false"
        />
        <evocon-v-tooltip-wrap-stub
          data-v-b63b48ce=""
          location="bottom"
          opendelay="500"
          text="Edit"
        />
        <evocon-v-tooltip-wrap-stub
          data-v-b63b48ce=""
          location="bottom"
          opendelay="500"
          text="Share"
        />
      </v-row-stub>
    </div>
  </v-col-stub>
  <v-col-stub
    class="dashboard-tabs-content"
    cols="false"
    data-v-b63b48ce=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    
    
    <!--v-if-->
  </v-col-stub>
</v-row-stub>
`;

exports[`DashboardTabs > renders correctly in small view 1`] = `
<v-row-stub
  class="fill-height flex-column bg-lw-gray dashboard-tabs-container"
  data-v-b63b48ce=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <!--v-if-->
  <v-app-bar-stub
    absolute="false"
    border="false"
    class="pl-1 pr-2 app-bar ml-16"
    collapse="false"
    collapseposition="start"
    data-v-b63b48ce=""
    data-v-bc209aca=""
    density="default"
    extensionheight="48"
    flat="false"
    floating="false"
    height="64"
    id="main-app-toolbar"
    location="top"
    modelvalue="true"
    order="0"
    scrollthreshold="300"
    tag="header"
    theme="dark"
    tile="false"
  >
    <!-- logo drawer button in small tablets and mobiles -->
    <v-app-bar-nav-icon-stub
      block="false"
      border="false"
      data-v-bc209aca=""
      density="default"
      disabled="false"
      exact="false"
      flat="false"
      icon="$menu"
      id="app-toolbar-logo"
      loading="false"
      replace="false"
      ripple="true"
      size="default"
      slim="false"
      stacked="false"
      symbol="Symbol(vuetify:v-btn-toggle)"
      tag="button"
      tile="false"
      variant="text"
    >
      <div
        class="toolbar-logo pa-3"
        data-v-bc209aca=""
      />
    </v-app-bar-nav-icon-stub>
    <!-- back button  -->
    <!--v-if-->
    <!-- title  -->
    <v-toolbar-title-stub
      class="font-weight-medium"
      data-v-bc209aca=""
      tag="div"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-bc209aca=""
        density="compact"
        disabled="false"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="false"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue="1"
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
        width="256"
      />
    </v-toolbar-title-stub>
    
    <menu-with-button-activator-stub
      buttonclasses=""
      buttonicon="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
      buttoniconcolor="white"
      buttontype="secondary"
      closeoncontentclick="true"
      data-v-b63b48ce=""
      hascheckbox="false"
      iconkey="icon"
      issingleselect="false"
      items="[object Object],[object Object]"
      listwidth="auto"
      location="bottom right"
      primarytextfield="name"
      secondarytextfield=""
      tertiarytextfield=""
      value=""
      valuekey=""
    />
    
  </v-app-bar-stub>
  <v-col-stub
    class="dashboard-tabs-content"
    cols="false"
    data-v-b63b48ce=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    
    
    <!--v-if-->
  </v-col-stub>
</v-row-stub>
`;

exports[`DashboardTabs > renders correctly in small view if dashboard sharing is not visible 1`] = `
<v-row-stub
  class="fill-height flex-column bg-lw-gray dashboard-tabs-container"
  data-v-b63b48ce=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <!--v-if-->
  <v-app-bar-stub
    absolute="false"
    border="false"
    class="pl-1 pr-2 app-bar ml-16"
    collapse="false"
    collapseposition="start"
    data-v-b63b48ce=""
    data-v-bc209aca=""
    density="default"
    extensionheight="48"
    flat="false"
    floating="false"
    height="64"
    id="main-app-toolbar"
    location="top"
    modelvalue="true"
    order="0"
    scrollthreshold="300"
    tag="header"
    theme="dark"
    tile="false"
  >
    <!-- logo drawer button in small tablets and mobiles -->
    <v-app-bar-nav-icon-stub
      block="false"
      border="false"
      data-v-bc209aca=""
      density="default"
      disabled="false"
      exact="false"
      flat="false"
      icon="$menu"
      id="app-toolbar-logo"
      loading="false"
      replace="false"
      ripple="true"
      size="default"
      slim="false"
      stacked="false"
      symbol="Symbol(vuetify:v-btn-toggle)"
      tag="button"
      tile="false"
      variant="text"
    >
      <div
        class="toolbar-logo pa-3"
        data-v-bc209aca=""
      />
    </v-app-bar-nav-icon-stub>
    <!-- back button  -->
    <!--v-if-->
    <!-- title  -->
    <v-toolbar-title-stub
      class="font-weight-medium"
      data-v-bc209aca=""
      tag="div"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-bc209aca=""
        density="compact"
        disabled="false"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="false"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue="1"
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
        width="256"
      />
    </v-toolbar-title-stub>
    
    <evocon-v-button-stub
      color="white"
      data-v-b63b48ce=""
      icon="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"
      iconcolor=""
      text=""
      textclass=""
      type="primary"
    />
    
  </v-app-bar-stub>
  <v-col-stub
    class="dashboard-tabs-content"
    cols="false"
    data-v-b63b48ce=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    
    
    <!--v-if-->
  </v-col-stub>
</v-row-stub>
`;
